<resources>
    <string name="app_name">My Budget</string>
    <string name="register">Register</string>
    <string name="new_user_name">New user name</string>
    <string name="new_password">New password</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="required_field">Required field!</string>
    <string name="error">Error</string>
    <string name="username_does_not_exist">This username does not exist! Would you like to register it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_password_again">New password again</string>
    <string name="passwords_are_not_matching">The passwords are not matching!</string>
    <string name="my_budget">My Budget</string>
    <string name="new_transaction">New Transaction</string>
    <string name="items">Items</string>
    <string name="show_transactions">Show Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_user">Create User</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="add_new_item">Add new item</string>
    <string name="name">Name</string>
    <string name="category_name">Category name</string>
    <string name="value">Value</string>
    <string name="is_income">Is income</string>
    <string name="item_already_exists">Item already exists</string>
    <string name="the_item">The item</string>
    <string name="already_exists_in_the_db">already exists in the database!</string>
    <string name="fields_were_missing">Some of the fields were missing to create item!</string>
    <string name="edit_item">Edit item</string>
    <string name="item_name">Item name</string>
    <string name="some_fields_were_missing_transaction">Some of the fields were missing to create transaction!</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="current_time">Current time</string>
    <string name="total_income">Total income:</string>
    <string name="total_expense">Total Expense:</string>
    <string name="gross_profit">Gross profit:</string>
    <string name="transactions">Transactions</string>
    <string name="currency">Currency:</string>
    <string name="huf">HUF</string>
    <string name="log_out">Log out</string>
    <string name="delete_item">Delete item?</string>
    <string name="warning">Warning</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
