<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:elevation="10dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/new_user_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_user_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_again_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_to_db_button"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register" />


</LinearLayout>